add by marquee tag in html

--- a/index.html
+++ b/index.html
@@ -96,5 +96,8 @@
         </ul>
       </div>
     </div>
+    <marquee style="font-size: 11px" behavior="" direction=""
+      >create by tanvir</marquee
+    >
   </body>
 </html>
